<resources>
    <string name="app_name">Deals</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="recent_releases">Lançamentos</string>
    <string name="deals">Promoções</string>
    <string name="soon">Em Breve</string>
    <string name="settings">Configurações</string>

    //Settings
    <string name="remove_ads">Remover Anúncios</string>
    <string name="currency">Moeda</string>
    <string name="translate_app">Traduzir o app</string>
    <string name="suggestions">Sugestões</string>
    <string name="known_bugs">Bugs conhecidos</string>
    <string name="my_twitter">Meu Twitter</string>
    <string name="partner_instagram">Instagram Parceiro</string>
    <string name="rate_us">Avalie o app</string>
    <string name="app_version">Versão do app</string>

    <string name="select_currency">Selecione a moeda</string>

    //Game Activity
    <string name="information">Informações</string>
    <string name="release_date">Data de Lançamento: %s</string>
    <string name="has_demo">Demo Disponível: %s</string>
    <string name="game_size">Tamanho: %s</string>
    <string name="publishers">Publicadora(s): %s</string>
    <string name="number_of_players">Número de Jogadores: %s</string>
    <string name="physical_media">Mídia Física: %s</string>
    <string name="best_price">Melhor Preço: %s</string>
    <string name="country">País: %s</string>
    <string name="game_status">Status: %s</string>
    <string name="gold_points">Pontos de Ouro: %s</string>
    <string name="see_trailer">Ver Trailer</string>
    <string name="prices">Preços</string>
    <string name="language">Idiomas</string>
    <string name="categories">Categorias</string>
    <string name="description">Descrição</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="fechar">Fechar</string>
    <string name="no_info">Sem Informações</string>
    <string name="suggestion_desc">Ficamos felizes em receber sua sugestão!\nVocê pode enviar até 3 sugestões para análise.\n\nUsaremos seu e-mail para responder caso sua sugestão seja aceita.</string>
    <string name="your_email">informe seu e-mail</string>
    <string name="your_suggestions">digite sua sugestão</string>
    <string name="send">enviar</string>
    <string name="suggestion_sent">Sugestão enviada :)</string>
    <string name="suggestion_error">Você já atingiu o limite de sugestões</string>

    <string name="search_game_title">Buscar jogo</string>
    <string name="search_game">Digite o nome do jogo</string>

    <string name="soon_feature">Chegando em breve :)</string>
    <string name="no_results">Sem resultados</string>
    <string name="title_activity_ad_mob_acitivity">AdMobAcitivity</string>
    <string name="action_settings">Settings</string>

    <string name="bug_solved_description"><b>%1$s</b>\n%2$s\nCorrigido na versão: %3$s</string>
    <string name="bug_notsolved_description"><b>%1$s</b>\n%2$s\nAinda não corrigido.</string>
    <string name="no_bugs_found">Nenhum bug encontrado :)</string>

    <string name="market_not_found">Acesso a loja não disponível</string>
    <string name="error_purchase">Erro ao concluir a compra</string>

    <string name="connected_to_server">Conectado ao servidor</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="interstitial_ad_unit_id_prod">ca-app-pub-3559495117114477/7650343479</string>

</resources>
